Fix z-index overlay issue in dock panels (#14695)

--- a/packages/core/src/browser/style/dockpanel.css
+++ b/packages/core/src/browser/style/dockpanel.css
@@ -14,6 +14,16 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0
  ********************************************************************************/
 
+/*
+ * phosphor.js sets the z-index of its panels to 0, which causes overlay issues
+ * See also https://github.com/eclipse-theia/theia/issues/14290
+ */
+.p-SplitPanel-child,
+.p-DockPanel,
+.p-DockPanel-widget {
+  z-index: initial;
+}
+
 .p-DockPanel.p-SplitPanel-child {
   padding: 0px;
 }
